# Match-Maker

./: CMakeLists.txt  README.md  data.json  main.cpp  mainwindow.cpp  mainwindow.h
src/engine/: game.h  game_registry.cpp  game_registry.h  matchmaking_engine.cpp  matchmaking_engine.h  user.cpp  user_registry.cpp  user_registry.h
src/engine/game/: game.cpp  game.h  game_executor.cpp  game_executor.h  game_registry.cpp  game_registry.h
src/engine/io/: io_handler.h  json_io_handler.cpp  json_io_handler.h
src/engine/matchmaking/: matchmaking_engine.cpp  matchmaking_engine.h
src/engine/pool/: user_pool_manager.cpp  user_pool_manager.h
src/engine/user/: user.cpp  user.h  user_registry.cpp  user_registry.h
src/models/: dashboard_model.cpp  dashboard_model.h  dashboard_serializer.cpp  dashboard_serializer.h  user_table_model.cpp  user_table_model.h
src/models/dashboard/: dashboard_model.cpp  dashboard_model.h  dashboard_serializer.cpp  dashboard_serializer.h
src/models/user_table/: user_table_model.cpp  user_table_model.h
src/viewers/: add_user_dialog.cpp  add_user_dialog.h  app_toolbar.cpp  app_toolbar.h  dashboard_widget.cpp  dashboard_widget.h  remove_user_dialog.cpp  user_table_widget.cpp  user_table_widget.h
src/viewers/dashboard/: dashboard_widget.cpp  dashboard_widget.h
src/viewers/dialogs/: add_user_dialog.cpp  add_user_dialog.h  remove_user_dialog.cpp  remove_user_dialog.h
src/viewers/mainwindow/: mainwindow.cpp  mainwindow.h
src/viewers/toolbar/: app_toolbar.cpp  app_toolbar.h
src/viewers/user_table/: user_table_context_menu.cpp  user_table_context_menu.h  user_table_widget.cpp  user_table_widget.h
tests/: test_game.cpp  test_game.h  test_game_executor.cpp  test_game_executor.h  test_json_io.cpp  test_json_io.h  test_matchmaking_engine.cpp  test_user.cpp  test_user.h  test_user_pool_mgr.cpp  test_user_pool_mgr.h  test_user_registry.cpp
tests/games/: afw.bat  always_first_wins.py  game.bat  game_for_test.py
